--- a/main.scss
+++ b/main.scss
@@ -2,6 +2,11 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+html,
+body {
+    overflow-x: hidden;
+} 
+
 :root{
     --base-background-color:rgba(19, 19, 19, 1);
     --base-text-color:rgb(255, 255, 255);
@@ -22,11 +27,9 @@ body{
   
   margin: 0;
   margin-top: 1em;
+  width: auto;
   
   height: auto;
-  width: auto;
-
-  overflow-x: hidden;
 }
 
 // responsive sm to xxl, start 375 X 667 (Ip SE)
@@ -158,7 +161,7 @@ header{
         h1{
             line-height: 80px;
             margin:0;
-            font-size: 5rem;
+            font-size: 5em;
             margin-top:1em;
             margin-bottom: 0.5em;
 
@@ -169,7 +172,7 @@ header{
         
         p{
             margin:0;
-            max-width: 350px;
+            max-width: 250px;
             margin-bottom: 2em;
             // to sepperate coma up and down
         }
@@ -358,9 +361,10 @@ header{
 //ANCHOR intrest
 
 .intrest{
-    margin: 0 2em;
     position: relative;
     height: 40vh;
+
+    padding-right: 2em;
 
     .blob {
         position: absolute;
@@ -412,6 +416,7 @@ header{
         min-width: 250px;
 
         text-align: right;
+        margin:0 2em;
 
         background-color: var(--primary-color);
         color: var(--base-background-color);
@@ -563,6 +568,8 @@ header{
                 transition: all 0.2s linear;
                 cursor: pointer;
 
+                z-index: 2;
+
             }
 
             button:hover{
@@ -712,6 +719,8 @@ header{
                 transition: all 0.2s linear;
                 cursor: pointer;
 
+                z-index: 2;
+
             }
 
             button:hover{
@@ -844,7 +853,9 @@ header{
         }
 
         .intrest{
+          padding: 0;
             padding-top: 2em;
+
 
             .wrapper{
                 display: grid;
@@ -859,6 +870,8 @@ header{
                 font-size: 1em;
                 transition: all 0.2s linear;
                 cursor: pointer;
+
+                z-index: 2;
 
             }
 
@@ -1467,90 +1480,91 @@ header{
 //adjustment
 
 //ANCHOR small screen
+
 @media only screen and (min-width: 499px){
-    header{
-        font-size:0.9em;
-    }
+  header{
+      font-size:0.9em;
+  }
 }
 
 @media only screen and (min-width: 780px){
-    
-    header{
-        font-size:0.9em;
-        margin: 2em;
-    }
+  
+  header{
+      font-size:0.9em;
+      margin: 2em;
+  }
 
-    .hero{
-        margin: 0 3em;
-    }
+  .hero{
+      margin: 0 3em;
+  }
 
-    .aboutme{
-        margin: 0 3em;
-    }
+  .aboutme{
+      margin: 0 3em;
+  }
 }
 
 @media only screen and (min-width: 1100px){
-    
-    header{
-        font-size:0.9em;
-        margin: 0 3em;
-    }
+  
+  header{
+      font-size:0.9em;
+      margin: 0 3em;
+  }
 
-    .hero{
-        margin: 0 5em;
+  .hero{
+      margin: 0 5em;
 
-        .hero-text{
+      .hero-text{
 
-            h1{
-                font-size: 8em;
-                line-height: 1em;
-                margin-top: 0.5em;
-                margin-bottom:0.3em;
-            }
-        }
-    }
+          h1{
+              font-size: 8em;
+              line-height: 1em;
+              margin-top: 0.5em;
+              margin-bottom:0.3em;
+          }
+      }
+  }
 
-    .about-me{
-        margin: 0 5em;
+  .about-me{
+      margin: 0 5em;
 
-        .about-me-title{
-            h1{
-                font-size: 3em;
-            }
-        }
+      .about-me-title{
+          h1{
+              font-size: 3em;
+          }
+      }
 
-    }
-    .intrest{
-        .intrest-title{
-            h1{
-                font-size: 3em;
-                padding-right:1em;
-            }
+  }
+  .intrest{
+      .intrest-title{
+          h1{
+              font-size: 3em;
+              padding-right:1em;
+          }
 
-            button{
-                margin-right: 3em;
-            }
-        }
+          button{
+              margin-right: 3em;
+          }
+      }
 
-        .intrest-content{
-            margin: 0 3em;
-        }
-    }
+      .intrest-content{
+          margin: 0 3em;
+      }
+  }
 
 
-    .social-media{
+  .social-media{
 
-        ul{
-            flex-direction: row;
-            margin: 0 3em;
-            justify-content: space-between;
-        }
-    }
+      ul{
+          flex-direction: row;
+          margin: 0 3em;
+          justify-content: space-between;
+      }
+  }
 
-    .contact{
-        h3{
-            font-size: 3em;
-            margin: 0 1.3em;
-        }
-    }
+  .contact{
+      h3{
+          font-size: 3em;
+          margin: 0 1.3em;
+      }
+  }
 }
