--- a/main.css
+++ b/main.css
@@ -184,6 +184,7 @@ header nav ul li {
   top: -15%;
   left: 120%;
   min-width: 250px;
+  max-width: 30rem;
   background-color: var(--primary-color);
   color: var(--base-background-color);
   padding: 20px;
@@ -301,6 +302,7 @@ header nav ul li {
   top: -15%;
   right: 120%;
   min-width: 250px;
+  max-width: 30rem;
   text-align: right;
   margin: 0 2em;
   background-color: var(--primary-color);
